--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,29 @@ project(ExqudensCPPCmake)
 
 set(CMAKE_CXX_STANDARD 20)
 
-#--- download example ---
+#--- download example 1 ---
+
+#include(FetchContent)
+#FetchContent_Declare(
+#        googletest
+#        GIT_REPOSITORY https://github.com/google/googletest.git
+#        GIT_TAG        release-1.8.0
+#)
+#FetchContent_MakeAvailable(googletest)
+
+#message(STATUS "googletest include dir: ${googletest_SOURCE_DIR}/include")
+
+#include_directories(${googletest_SOURCE_DIR}/googletest/include)
+#add_executable(Google_Tests_run src/test/cpp/google_test_1.cpp)
+#target_link_libraries(Google_Tests_run gtest gtest_main)
+
+#--------------------------
+
+#--- download example 2 ---
+
+#--------------------------
+
+#--- download example 3 ---
 
 #set(MY_URL "https://raw.githubusercontent.com/exqudens/exqudens-c-study-project-a-grade/master/src/main/cpp/application/model/IntArray.h")
 ##set(MY_URL "file:///C:/exqudens/cpp/exqudens-c-study-project-a-grade/src/main/cpp/application/model/IntArray.h")
@@ -14,7 +36,7 @@ set(CMAKE_CXX_STANDARD 20)
     ##file(DOWNLOAD "${MY_URL}" "${MY_DOWNLOAD_PATH}")
 ##endif()
 
-#------------------------
+#--------------------------
 
 set(
         SOURCE_FILES
@@ -26,8 +48,8 @@ set(
         ${SOURCE_FILES}
         src/test/cpp/tests.hpp
         src/test/cpp/tests.cpp
-        src/test/cpp/test_1.hpp
-        src/test/cpp/test_2.hpp
+        src/test/cpp/assertions.hpp
+        src/test/cpp/exqudens/test_strings.hpp
 )
 
 add_executable(
@@ -45,8 +67,12 @@ add_executable(
         src/test/cpp/run_tests.cpp
 )
 
-add_test(NAME test_1_run COMMAND ${CMAKE_PROJECT_NAME}RunTests test_1_run)
-add_test(NAME test_2_run COMMAND ${CMAKE_PROJECT_NAME}RunTests test_2_run)
+add_test(exqudens_test_strings_test_1 ${CMAKE_PROJECT_NAME}RunTests exqudens_test_strings_test_1)
+add_test(exqudens_test_strings_test_2 ${CMAKE_PROJECT_NAME}RunTests exqudens_test_strings_test_2)
+add_test(exqudens_test_strings_test_3 ${CMAKE_PROJECT_NAME}RunTests exqudens_test_strings_test_3)
+add_test(exqudens_test_strings_test_4 ${CMAKE_PROJECT_NAME}RunTests exqudens_test_strings_test_4)
+add_test(exqudens_test_strings_test_5 ${CMAKE_PROJECT_NAME}RunTests exqudens_test_strings_test_5)
+add_test(exqudens_test_strings_test_6 ${CMAKE_PROJECT_NAME}RunTests exqudens_test_strings_test_6)
 
 add_custom_command(
         TARGET ${CMAKE_PROJECT_NAME}RunTests
